@@ -3,6 +3,8 @@ New features:
 - Added the 'findname' command to find all occurrences of a PDF name.
 - Added --allow-nonascii-in-names option to allow names to contain non-ASCII
   characters instead of the corresponding escape sequence.
+- When available, the 'stats' command also outputs main metadata from the /Info
+  dictionary (/Producer, /Creator, /CreationDate and /ModDate).
 
 Misc:
 - Improved error handling.
